# agt

./: .clang-format  .clangd  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  RELEASING.md  ROADMAP.md  agt.pc.in
.github/workflows/: ci.yml  release.yml
cmake/: agtConfig.cmake.in  version.hpp.in
examples/: CMakeLists.txt  agent.cpp  complete.cpp  mcp.cpp  models.cpp
include/agt/: agent.hpp  agent_as_tool.hpp  json.hpp  llm.hpp  mcp.hpp  runner.hpp  session.hpp  tool.hpp
src/: agent_as_tool.cpp  http.cpp  http.hpp  llm.cpp  llm_anthropic.cpp  llm_anthropic.hpp  llm_gemini.cpp  llm_gemini.hpp  llm_impl.hpp  llm_mistral.cpp  llm_mistral.hpp  llm_openai.cpp  llm_openai.hpp  llm_schemas.hpp  mcp.cpp  pg_session.cpp  pg_session.hpp  runner.cpp  session.cpp  sqlite_session.cpp  sqlite_session.hpp
tests/: CMakeLists.txt  test_anthropic.cpp  test_gemini.cpp  test_integration.cpp  test_llm_fake.cpp  test_mcp.cpp  test_mistral.cpp  test_openai.cpp  test_pg_session.cpp  test_provider_utils.cpp  test_runner.cpp  test_session.cpp  test_sqlite_session.cpp
tests/fixtures/: fake_mcp_http.py  fake_mcp_sse.py  fake_mcp_stdio.py  fake_openai_llm.py
